--- a/Editor/Resources/RailsThirdPage.uxml
+++ b/Editor/Resources/RailsThirdPage.uxml
@@ -1,4 +1,8 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <ui:VisualElement style="height: 45px; flex-shrink: 0;" />
-    <ui:ScrollView mode="VerticalAndHorizontal" horizontal-scroller-visibility="Hidden" vertical-scroller-visibility="Hidden" style="flex-basis: 100%; background-color: rgb(40, 40, 40);" />
+    <Rails.Editor.Controls.TrackView data-source-path="SelectedClip" style="flex-grow: 1; flex-basis: 100%;">
+        <Bindings>
+            <ui:DataBinding property="Duration" data-source-path="DurationFrames" binding-mode="ToTarget" />
+        </Bindings>
+    </Rails.Editor.Controls.TrackView>
 </ui:UXML>
