--- a/Editor/Resources/RailsEditor.uss
+++ b/Editor/Resources/RailsEditor.uss
@@ -49,7 +49,7 @@
 .rails_key_toggle {
     margin-bottom: 0;
     margin-right: 0;
-    margin-left: 0;
+    margin-left: 1px;
     margin-top: 0;
     width: 10px;
     height: 10px;
@@ -120,4 +120,15 @@
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
+}
+
+.track-line {
+    flex-shrink: 0;
+    flex-direction: row;
+    height: 39px;
+    min-height: 39px;
+    border-bottom-width: 1px;
+    border-bottom-color: rgb(79, 79, 79);
+    width: 100%;
+    margin-top: 0;
 }
