--- a/Editor/Resources/RailsFirstPage.uxml
+++ b/Editor/Resources/RailsFirstPage.uxml
@@ -7,7 +7,7 @@
         <Bindings>
             <ui:DataBinding property="CanAdd" data-source-path="CanAddClip" binding-mode="ToTarget" />
             <ui:DataBinding property="SelectedIndex" data-source-path="SelectedClipIndex" binding-mode="TwoWay" />
-            <ui:DataBinding property="Clips" data-source-path="Clips" binding-mode="ToTarget" />
+            <ui:DataBinding property="Values" data-source-path="Clips" binding-mode="ToTarget" />
         </Bindings>
     </Rails.Editor.Controls.ClipsListView>
 </ui:UXML>
