--- a/Editor/Resources/RailsSecondPage.uxml
+++ b/Editor/Resources/RailsSecondPage.uxml
@@ -4,7 +4,7 @@
     <Rails.Editor.Controls.TracksListView data-source-path="SelectedClip" style="flex-grow: 1; flex-basis: 100%;">
         <Bindings>
             <ui:DataBinding property="CanEdit" data-source-path="CanEdit" binding-mode="ToTarget" />
-            <ui:DataBinding property="Tracks" data-source-path="Tracks" binding-mode="ToTarget" />
+            <ui:DataBinding property="Values" data-source-path="Tracks" binding-mode="ToTarget" />
         </Bindings>
     </Rails.Editor.Controls.TracksListView>
 </ui:UXML>
