--- a/Editor/Resources/RailsThirdPage.uxml
+++ b/Editor/Resources/RailsThirdPage.uxml
@@ -1,8 +1,10 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
+    <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
     <ui:VisualElement style="height: 45px; flex-shrink: 0;" />
     <Rails.Editor.Controls.TrackView data-source-path="SelectedClip" style="flex-grow: 1; flex-basis: 100%;">
         <Bindings>
             <ui:DataBinding property="Duration" data-source-path="DurationFrames" binding-mode="ToTarget" />
+            <ui:DataBinding property="Values" data-source-path="Tracks" binding-mode="ToTarget" />
         </Bindings>
     </Rails.Editor.Controls.TrackView>
 </ui:UXML>
