--- a/Editor/Resources/RailsTracksListView.uxml
+++ b/Editor/Resources/RailsTracksListView.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <ui:ScrollView vertical-scroller-visibility="Hidden" style="flex-grow: 1; flex-basis: 100%;">
         <ui:VisualElement name="tracks-container" style="flex-grow: 1; padding-left: 10px;" />
-        <ui:VisualElement name="button-container" style="flex-grow: 1; padding-right: 40px; padding-left: 40px; padding-top: 10px; padding-bottom: 8px;">
+        <ui:VisualElement name="button-container" style="flex-grow: 1; padding-right: 40px; padding-left: 40px; padding-top: 10px; padding-bottom: 8px; margin-bottom: 12px;">
             <ui:Button text="+ Add Track" name="add-button" />
         </ui:VisualElement>
     </ui:ScrollView>
