--- a/Editor/Resources/RailsTrackView.uxml
+++ b/Editor/Resources/RailsTrackView.uxml
@@ -1,6 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <ui:ScrollView mode="VerticalAndHorizontal" style="background-color: rgb(40, 40, 40); height: 100%;">
-        <ui:VisualElement name="tracks-container" style="padding-bottom: 39px;" />
+    <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
+    <ui:ScrollView mode="VerticalAndHorizontal" horizontal-scroller-visibility="AlwaysVisible" touch-scroll-type="Clamped" style="background-color: rgb(40, 40, 40); height: 100%; width: 100%;">
+        <ui:VisualElement name="tracks-container" style="padding-bottom: 52px;" />
     </ui:ScrollView>
-    <ui:MinMaxSlider style="margin-top: 0; margin-left: 0; margin-right: 0; margin-bottom: 0;" />
+    <ui:MinMaxSlider class="time-scroller" style="margin-top: 0; margin-left: 0; margin-right: 12px; margin-bottom: 0;" />
 </ui:UXML>
