--- a/Editor/Resources/RailsEditor.uss
+++ b/Editor/Resources/RailsEditor.uss
@@ -193,8 +193,16 @@
     -unity-background-image-tint-color: rgb(94, 135, 197);
 }
 
+.move-anchor-color {
+    background-color: rgb(94, 135, 197);
+}
+
 .fade {
     -unity-background-image-tint-color: rgb(87, 222, 211);
+}
+
+.fade-color {
+    background-color: rgb(87, 222, 211);
 }
 
 .track-key {
@@ -206,7 +214,7 @@
     opacity: 0.6;
 }
 
-.track-key.tack-key--selected {
+.track-key.track-key--selected {
     background-image: resource('Icons/gem_fill_small');
     width: 12px;
     height: 12px;
@@ -225,4 +233,28 @@
 .play-head-tail {
     width: 1px;
     background-color: rgb(255, 44, 128);
+}
+
+.track-tween-line-container {
+    position: absolute;
+    opacity: 0.6;
+    height: 100%;
+    justify-content: center;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.track-tween-line-container.track-key--selected {
+    position: absolute;
+    opacity: 1;
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 100%;
+    justify-content: center;
+}
+
+.track-tween-line {
+    height: 1px;
+    align-self: center;
+    width: 100%;
 }
