--- a/Editor/Resources/RailsTrack.uxml
+++ b/Editor/Resources/RailsTrack.uxml
@@ -9,21 +9,9 @@
             </Bindings>
         </uie:ObjectField>
         <ui:VisualElement name="value-container" style="flex-grow: 1; flex-direction: row; align-items: center; flex-shrink: 4; flex-basis: 115px;">
-            <ui:Vector3Field name="vector3-value" style="flex-shrink: 4; flex-grow: 1;">
-                <Bindings>
-                    <ui:DataBinding property="value" data-source-path="CurrentVector3Value" binding-mode="TwoWay" />
-                </Bindings>
-            </ui:Vector3Field>
-            <ui:Vector2Field name="vector2-value" style="margin-left: 0; margin-right: 0; flex-shrink: 1; flex-grow: 1; display: none;">
-                <Bindings>
-                    <ui:DataBinding property="value" data-source-path="CurrentVector2Value" binding-mode="TwoWay" />
-                </Bindings>
-            </ui:Vector2Field>
-            <ui:FloatField value="42.2" name="float-value" style="margin-left: 0; margin-right: 0; display: none; flex-shrink: 1; flex-grow: 1;">
-                <Bindings>
-                    <ui:DataBinding property="value" data-source-path="CurrentSingleValue" binding-mode="TwoWay" />
-                </Bindings>
-            </ui:FloatField>
+            <ui:Vector3Field name="vector3-value" style="flex-shrink: 4; flex-grow: 1;" />
+            <ui:Vector2Field name="vector2-value" style="margin-left: 0; margin-right: 0; flex-shrink: 1; flex-grow: 1; display: none;" />
+            <ui:FloatField value="42.2" name="float-value" style="margin-left: 0; margin-right: 0; display: none; flex-shrink: 1; flex-grow: 1;" />
             <ui:VisualElement name="key" class="rails_key_toggle" style="flex-grow: 0; width: 10px; height: 10px; flex-shrink: 0;" />
         </ui:VisualElement>
     </ui:VisualElement>
