--- a/Editor/Resources/RailsEditor.uss
+++ b/Editor/Resources/RailsEditor.uss
@@ -56,13 +56,15 @@
 }
 
 .rails_key_toggle {
-    background-image: resource('Icons/gem_stroke_small');
+    background-image: var(--rails-icon-gem-stroke);
+    -unity-background-image-tint-color: var(--color-active);
     width: 10px;
     height: 10px;
 }
 
 .rails_key_toggle.key_frame {
-    background-image: resource('Icons/gem_fill_small');
+    background-image: var(--rails-icon-gem-fill);
+    -unity-background-image-tint-color: var(--color-active);
     width: 10px;
     height: 10px;
 }
@@ -189,74 +191,56 @@
     background-color: rgb(113, 113, 113);
 }
 
-.move-anchor {
-    -unity-background-image-tint-color: rgb(94, 135, 197);
-}
-
-.move-anchor-color {
-    background-color: rgb(94, 135, 197);
-}
-
-.fade {
-    -unity-background-image-tint-color: rgb(87, 222, 211);
-}
-
-.fade-color {
-    background-color: rgb(87, 222, 211);
-}
-
 .track-key {
-    background-image: resource('Icons/gem_fill_small');
+    background-image: var(--rails-icon-gem-fill);
+    -unity-background-image-tint-color: var(--color-not-active);
     width: 12px;
     height: 12px;
     position: absolute;
     align-self: center;
-    opacity: 0.6;
 }
 
 .track-key.track-key--selected {
-    background-image: resource('Icons/gem_fill_small');
+    background-image: var(--rails-icon-gem-fill);
+    -unity-background-image-tint-color: var(--color-active);
     width: 12px;
     height: 12px;
     position: absolute;
     align-self: center;
-    opacity: 1;
-}
-
-.play-head-icon {
-    width: 9px;
-    height: 10px;
-    background-image: resource('Icons/play_head_small');
-    -unity-background-image-tint-color: rgb(255, 44, 128);
-}
-
-.play-head-tail {
-    width: 1px;
-    background-color: rgb(255, 44, 128);
 }
 
 .track-tween-line-container {
     position: absolute;
-    opacity: 0.6;
     height: 100%;
     justify-content: center;
     padding-left: 5px;
     padding-right: 5px;
-}
-
-.track-tween-line-container.track-key--selected {
-    position: absolute;
-    opacity: 1;
-    padding-left: 5px;
-    padding-right: 5px;
-    height: 100%;
-    justify-content: center;
 }
 
 .track-tween-line {
     height: 1px;
     align-self: center;
     width: 100%;
+    background-color: var(--color-not-active);
+}
+
+.track-tween-line-container.track-key--selected > .track-tween-line {
+    height: 1px;
+    align-self: center;
+    width: 100%;
+    background-color: var(--color-active);
+}
+
+.play-head-icon {
+    width: 9px;
+    height: 10px;
+    background-image: var(--rails-icon-play-head);
+    -unity-background-image-tint-color: var(--rails-play-head-color);
+}
+
+.play-head-tail {
+    width: 1px;
+    background-color: var(--rails-play-head-color);
 }
 
 .selection-box {
