--- a/Editor/Resources/RailsTrackView.uxml
+++ b/Editor/Resources/RailsTrackView.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
-    <ui:VisualElement style="flex-grow: 1; background-color: rgb(40, 40, 40); height: 100%; width: 100%;">
+    <ui:VisualElement class="tween-lines-background" style="flex-grow: 1; height: 100%; width: 100%;">
         <ui:ScrollView touch-scroll-type="Clamped" horizontal-scroller-visibility="Hidden" style="width: 100%; position: absolute; height: 100%;">
             <ui:VisualElement name="content-container" style="flex-grow: 1;">
                 <ui:VisualElement name="selection-box-manipulator" style="flex-grow: 1; width: 100%; height: 100%; position: absolute;">
