--- a/Editor/Resources/RailsFirstPage.uxml
+++ b/Editor/Resources/RailsFirstPage.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
-    <ui:VisualElement name="title" style="flex-grow: 0; height: 45px; padding-top: 10px; padding-bottom: 10px; padding-left: 16px; padding-right: 16px; justify-content: center; border-left-color: rgb(34, 34, 34); border-right-color: rgb(34, 34, 34); border-top-color: rgb(34, 34, 34); border-bottom-color: rgb(34, 34, 34); border-bottom-width: 1px;">
+    <ui:VisualElement name="title" class="clips-title-block">
         <ui:Label text="Animations" style="font-size: 14px;" />
     </ui:VisualElement>
     <Rails.Editor.Controls.ClipsListView name="clips-view" style="flex-basis: 100%; flex-grow: 1;">
