--- a/Editor/Resources/RailsTrackView.uxml
+++ b/Editor/Resources/RailsTrackView.uxml
@@ -6,7 +6,7 @@
                 <ui:VisualElement name="selection-box-manipulator" style="flex-grow: 1; width: 100%; height: 100%; position: absolute;">
                     <ui:VisualElement name="click-manipulator" style="flex-grow: 1;" />
                 </ui:VisualElement>
-                <ui:VisualElement name="tracks-container" picking-mode="Ignore" class="tracks-container" style="padding-bottom: 52px; background-image: none;" />
+                <ui:VisualElement name="tracks-container" picking-mode="Ignore" class="track-lines-background" style="padding-bottom: 52px; background-image: none;" />
                 <ui:VisualElement name="selection-box-container" picking-mode="Ignore" style="flex-grow: 1; position: absolute; width: 100%; height: 100%; overflow: hidden;" />
             </ui:VisualElement>
         </ui:ScrollView>
