--- a/Editor/Resources/USS/RailsLightTheme.uss
+++ b/Editor/Resources/USS/RailsLightTheme.uss
@@ -11,6 +11,7 @@
 	--rails-play-head-color: #D51260;
 	--rails-drop-down-color: #555555;
 	--rails-drag-handler-color: #8B8B8B;
+	--rails-toolbar-stroke-color: #6B6B6B;
 	--rails-track-control-background-color: #D4D4D4;
 	--rails-track-control-stroke-color: #B0B0B0;
 	--rails-track-background-color: #DFDFDF;
