--- a/Editor/Resources/RailsEditor.uss
+++ b/Editor/Resources/RailsEditor.uss
@@ -107,6 +107,15 @@
     flex-direction: row;
     height: 39px;
     min-height: 39px;
+    width: 100%;
+    margin-top: 0;
+}
+
+.track-line-background {
+    flex-shrink: 0;
+    flex-direction: row;
+    height: 39px;
+    min-height: 39px;
     border-bottom-width: 1px;
     border-bottom-color: var(--rails-track-separator-color);
     width: 100%;
