--- a/Editor/Resources/RailsEditor.uxml
+++ b/Editor/Resources/RailsEditor.uxml
@@ -1,4 +1,4 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
-    <Rails.Editor.Controls.TwoPanelsView fixed-pane-initial-dimension="200" style="width: 100%; height: 100%; flex-grow: 1;" />
+    <Rails.Editor.Controls.TwoPanelsView fixed-pane-initial-dimension="200" fixed-panel-initial-dimension="250" style="width: 100%; height: 100%; flex-grow: 1;" />
 </engine:UXML>
