--- a/Editor/Resources/RailsThirdPage.uxml
+++ b/Editor/Resources/RailsThirdPage.uxml
@@ -1,13 +1,21 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
     <ui:VisualElement name="content-layer" picking-mode="Ignore" data-source-path="SelectedClip" style="flex-grow: 1; width: 100%; height: 100%;">
-        <ui:VisualElement name="top-panel" style="height: 45px; flex-shrink: 0;">
-            <Rails.Editor.Controls.RailsRuler>
+        <ui:VisualElement name="top-panel" style="flex-shrink: 0;">
+            <Rails.Editor.Controls.RailsRuler name="ruler">
                 <Bindings>
                     <ui:DataBinding property="Duration" data-source-path="DurationFrames" binding-mode="ToTarget" />
                     <ui:DataBinding property="TimeHeadPosition" data-source-path="TimeHeadPositionFrames" binding-mode="ToSource" />
                 </Bindings>
             </Rails.Editor.Controls.RailsRuler>
+            <ui:VisualElement name="events" data-source-path="EventTrack" style="flex-grow: 1; overflow: hidden;">
+                <ui:VisualElement name="background" class="event-track-line-background" style="flex-grow: 1; position: absolute; width: 100%; height: 100%;" />
+                <ui:VisualElement name="events-container" style="flex-grow: 1;">
+                    <ui:VisualElement name="selection-box-manipulator" style="flex-grow: 1; position: absolute; width: 100%; height: 100%;" />
+                    <Rails.Editor.Controls.EventTrackLineView />
+                    <ui:VisualElement name="selection-box-container" picking-mode="Ignore" style="flex-grow: 1; width: 100%; height: 100%; position: absolute;" />
+                </ui:VisualElement>
+            </ui:VisualElement>
         </ui:VisualElement>
         <Rails.Editor.Controls.TrackLinesView style="flex-grow: 1; flex-basis: 100%;">
             <Bindings>
