--- a/Editor/Resources/EventKeyEditor.uxml
+++ b/Editor/Resources/EventKeyEditor.uxml
@@ -1,10 +1,4 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <ui:VisualElement name="EventKeyEditor" style="flex-grow: 1; padding-left: 10px; padding-right: 10px; padding-top: 8px; padding-bottom: 8px;">
-        <ui:TextField label="Time" name="time" style="margin-bottom: 8px;">
-            <Bindings>
-                <ui:DataBinding property="value" data-source-path="TimePositionText" binding-mode="ToTarget" />
-            </Bindings>
-        </ui:TextField>
-        <Rails.Editor.Controls.SerializableEventView name="event" data-source-path="AnimationEvent" />
-    </ui:VisualElement>
+    <ui:TextField label="Time" name="time" is-delayed="true" style="margin-bottom: 8px;" />
+    <Rails.Editor.Controls.SerializableEventView name="event" data-source-path="AnimationEvent" />
 </ui:UXML>
