--- a/Editor/Resources/KeyEditor.uxml
+++ b/Editor/Resources/KeyEditor.uxml
@@ -19,7 +19,7 @@
             </Bindings>
         </ui:Label>
     </ui:VisualElement>
-    <ui:VisualElement name="content" style="flex-grow: 0; border-bottom-width: 1px; border-bottom-color: rgb(48, 48, 48);">
+    <ui:VisualElement name="content" style="flex-grow: 0; border-bottom-width: 1px; border-bottom-color: rgb(48, 48, 48); padding-top: 8px; padding-bottom: 8px; padding-left: 10px; padding-right: 10px;">
         <Bindings>
             <ui:DataBinding property="style.display" data-source-path="ShowInspectorFoldout" binding-mode="ToTarget" />
         </Bindings>
